5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1798_2564.log
== TEST (2019-06-10 14:30:59) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:13) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:31:19) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- EXECUTION TIME:
1.27507
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 14, in <module>
    vet = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:31:36) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- EXECUTION TIME:
1.11328
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 14, in <module>
    vet = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:56) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:39) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:32:45) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- EXECUTION TIME:
2.02178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 14, in <module>
    vet = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:32:46) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- EXECUTION TIME:
2.17264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 14, in <module>
    vet = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:33:05) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
0.807759
-- ERROR:
  File "/home/codebench/codes/1798/2564/main.py", line 15
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:33:24) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" ")))
-- EXECUTION TIME:
1.08993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 14, in <module>
    vet = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 08:00:12) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)
-- EXECUTION TIME:
1.04679
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
